# dviont

./: .gitignore  MANIFEST.in  README.md  dviont.yaml  pyproject.toml  setup.py
binaries/: parallel
models/r1041_e82_400bps_sup_v500/: pileup.index
scripts/: clair3_module.py  download_clair3_models.py  dviont-core_dev.py  dviont.py  extract_headers.py  minimap2.py  snpEff_module.py  vcf_processor.py
src/dviont/etc/: snpeff.config
src/dviont/models/r1041_e82_400bps_sup_v430_bacteria_finetuned/: full_alignment.index  pileup.index
src/dviont/models/r1041_e82_400bps_sup_v500/: full_alignment.index
src/dviont/scripts/: Different_SNPs_Bedfile  clair3_module.py  directory_management.py  download_clair3_models.py  dviont-core_dev.py  dviont.py  extract_fasta_and_gbk.py  merge_vcfs.py  minimap2.py  ref_format.py  snpEff_module.py  vcf_processor.py
