# mamba create -n dviont_env python=3.9
# pip3 install build

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dviont"
version = "0.1.1"
description = "dviONT (DNA Variant Identification using ONT) is a bacteria variant calling pipeline designed for Q20+ Oxford Nanopore Technologies sequencing data."
readme = "README.md"
requires-python = ">=3.9"
#dependencies = [
#    "absl-py==2.0.0", "aiohttp==3.8.5", "aiosignal==1.3.1", "amply==0.1.6", "astunparse==1.6.3", "async-timeout==4.0.3", 
#    "attrs==23.1.0", "biopython==1.81", "blinker==1.6.2", "Brotli==1.1.0", "cached-property==1.5.2", "cachetools==5.3.1", 
#    "certifi==2024.12.14", "cffi==1.14.4", "charset-normalizer==3.2.0", "click==8.1.7", "coloredlogs==15.0.1", "cryptography==39.0.0", 
#    "Cython==3.0.10", "cyvcf2==0.30.16", "docutils==0.20.1", "flatbuffers==23.5.26", "frozenlist==1.4.0", "gast==0.5.4", 
#    "google-auth==2.23.0", "google-auth-oauthlib==0.4.6", "google-pasta==0.2.0", "grpcio==1.43.0", "h5py==3.9.0", "humanfriendly==10.0", 
#    "idna==3.4", "importlib-metadata==6.8.0", "isal==1.3.0", "keras==2.8.0", "Keras-Preprocessing==1.1.2", "Markdown==3.4.4", 
#    "MarkupSafe==2.1.3", "multidict==6.0.4", "networkx==3.1", "numexpr==2.8.7", "numpy==1.26.0", "oauthlib==3.2.2", "opt-einsum==3.3.0", 
#    "packaging==23.1", "pip==23.2.1", "protobuf==3.19.6", "PuLP==2.7.0", "py-cpuinfo==9.0.0", "pyasn1==0.5.0", "pyasn1-modules==0.3.0", 
#    "pycparser==2.21", "pyfaidx==0.7.2.2", "PyJWT==2.8.0", "pyOpenSSL==23.2.0", "pyparsing==3.1.1", "pysam==0.21.0", "PySocks==1.7.1", 
#    "pyu2f==0.1.5", "PyVCF3==1.0.3", "requests==2.31.0", "requests-oauthlib==1.3.1", "rsa==4.9", "scipy==1.11.2", "setuptools==68.2.2", 
#    "six==1.16.0", "tables==3.8.0", "tensorboard==2.8.0", "tensorboard-data-server==0.6.1", "tensorboard-plugin-wit==1.8.1", 
#    "tensorflow==2.8.0", "tensorflow-estimator==2.8.0", "termcolor==2.3.0", "typing_extensions==4.8.0", "urllib3==1.26.16", 
#    "Werkzeug==2.3.7", "whatshap==1.7", "wheel==0.41.2", "wrapt==1.15.0", "xopen==1.7.0", "yarl==1.9.2", "zipp==3.17.0", "zstandard==0.21.0"
#]

[[project.authors]]
name = "William Shropshire"
email = "wcshropshire@mdanderson.org"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/wshropshire/dviont"
Repository = "https://github.com/wshropshire/dviont"

[project.scripts]
dviont = "dviont.scripts.dviont:main"
download_clair3_models = "dviont.scripts.download_clair3_models:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dviont = ["data/**", "models/**", "etc/**", "build/**", "binaries/**"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dviont*"]

[tool.setuptools.dynamic.version]
attr = "dviont.__version__"
